@@ -1,3 +1,7 @@
+2007-08-16 Charles Yan <cyan@bic.mni.mcgill.ca>
+   * Added linear regridding option and implemented nearest regridding
+   * Added the display of total time it took to reconstruct the volume
+
 2004-05-06 Andrew L. Janke  <rotor@cmr.uq.edu.au>
 
    * Added README
